fix: fixed text overflow

--- a/src/app/pages/about/information/information.component.scss
+++ b/src/app/pages/about/information/information.component.scss
@@ -1,3 +1,3 @@
-p {
+p, h2, li {
   white-space: normal;
 }
